--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <span class="border border-start-0 bg-success border-dark border-3 text-warning px-4">NO START BORDER with px-4</span>
                 <span class="border border-end-0 bg-success border-dark border-3 text-warning pt-3">NO END BORDER with pt-3</span>
                 <span class="border border-top-0 bg-success border-dark border-3 text-warning pb-1">NO TOP BORDER with pb-1</span>
-                <span class="border border-bottom-0 bg-success bborder-dark border-3 text-warning pe-5">NO BOTTOM BORDER with pe-5</span>
+                <span class="border border-bottom-0 bg-success border-dark border-3 text-warning pe-5">NO BOTTOM BORDER with pe-5</span>
                 <span class="border border-start-0 border-end-0 bg-success border-dark border-3 text-warning ps-2">NO LEFT AND RIGHT BORDER with ps-2</span>
                 <span class="border border-top-0 border-bottom-0 bg-success border-dark border-3 text-warning p-0">NO TOP AND BOTTOM BORDER with p-0</span>
             </div>
