--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
         <div class="container">
             <h1 class="display-2">TASK 6: APPLICATION OF ROUNDED SIZE & SHADOW</h1>
                 <div class="shadow-span">
-                    <span class="border bg-body border-danger border-2 rounded-0 text-dark shadow-sm p-3">SMALL SHADOW with rounded-0</span>
-                    <span class="border bg-body border-danger border-2 rounded-1 text-dark shadow p-3">REGULAR SHADOW with rounded-1</span>
-                    <span class="border bg-body border-danger border-2 rounded-2 text-dark shadow-lg p-3">LARGE SHADOW with rounded-2</span>
-                    <span class="border bg-body border-danger border-2 rounded-3 text-dark shadow-lg p-3">LARGE SHADOW with rounded-3</span>
+                    <span class="border bg-body border-danger border-2 rounded-3 text-dark shadow-none p-3">NO SHADOW with rounded-0</span>
+                    <span class="border bg-body border-danger border-2 rounded-0 text-dark shadow-sm p-3">SMALL SHADOW with rounded-1</span>
+                    <span class="border bg-body border-danger border-2 rounded-1 text-dark shadow p-3">REGULAR SHADOW with rounded-2</span>
+                    <span class="border bg-body border-danger border-2 rounded-2 text-dark shadow-lg p-3">LARGE SHADOW with rounded-3</span>
                 </div>
         </div>
 
